--- a/.github/workflows/publish-slides.yml
+++ b/.github/workflows/publish-slides.yml
@@ -1,7 +1,10 @@
 name: "Export and publish slides"
 on:
-  # Only add manual trigger for now
-  workflow_dispatch:
+    # Add trigger on push to main branch
+    push:
+      branches: ["main"]
+    # Add manual trigger option
+    workflow_dispatch:
 
 jobs:
   publish:
